todo-app/config/base/todo-app-web-server/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todoappwebserver-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todoappwebserver
  template:
    metadata:
      labels:
        app: todoappwebserver
    spec:
      containers:
        - name: todoappwebserver
          image: FRONTEND/IMAGE
          imagePullPolicy: Always
          volumeMounts:
            - name: todoapp
              mountPath: /usr/src/app/files
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 3
          livenessProbe:
            initialDelaySeconds: 40
            periodSeconds: 5
            httpGet:
              path: /actuator/health
              port: 3000
